# sql-nosql-course

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
data/: shin02-mysql.sql  shin02-pgsql.sql
data/shin02-mongo/: order_details.ndjson  orders.ndjson
data/shin03-mongo/: address_book.ndjson  categories.ndjson  members.ndjson  orders.ndjson  products.ndjson
mongodb/: README.md  config.py  export_to_ndjson.py  try_00_connect.py  try_01_select.py  try_02_insert.py  try_03_update.py  try_04_delete.py  try_05_join.py  try_06_transaction.py  try_07_pool.py
pgsql/: README.md  __init__.py  config.py  connect.py  pool.py  run_delete.py  run_insert.py  run_join.py  run_select.py  run_update.py  try_00_connect.py  try_01_select.py  try_02_insert.py  try_03_update.py  try_04_delete.py  try_05_join.py  try_06_transaction.py  try_07_pool.py  try_connect.py  try_pool.py  try_transaction.py
